--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "husky": "^3.0.0",
     "lint-staged": "^9.1.0",
     "node-sass": "^4.12.0",
+    "nodemon": "^1.19.1",
+    "redux-devtools-extension": "^2.13.8",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "url-loader": "^2.0.1",
@@ -37,7 +39,11 @@
   },
   "dependencies": {
     "@hot-loader/react-dom": "^16.8.6",
+    "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.12.5",
@@ -48,7 +54,8 @@
   },
   "scripts": {
     "start": "webpack-dev-server --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "server": "nodemon server/server.js"
   },
   "husky": {
     "hooks": {
