--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lint-staged": "^9.1.0",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.1",
+    "npm-run-all": "^4.1.5",
     "redux-devtools-extension": "^2.13.8",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
@@ -49,13 +50,15 @@
     "react-hot-loader": "^4.12.5",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
+    "react-truncate": "^2.4.0",
     "redux": "^4.0.3",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "webpack-dev-server --mode development",
+    "dev:client": "webpack-dev-server --mode development",
+    "dev:server": "nodemon server/server.js",
     "build": "webpack --mode production",
-    "server": "nodemon server/server.js"
+    "dev": "npm-run-all --parallel dev:*"
   },
   "husky": {
     "hooks": {
