--- a/package.json
+++ b/package.json
@@ -45,14 +45,17 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "formik": "^1.5.8",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.12.5",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
+    "react-text-mask": "^5.4.3",
     "react-truncate": "^2.4.0",
     "redux": "^4.0.3",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "dev:client": "webpack-dev-server --mode development",
