--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-hot-loader": "4.12.5",
     "react-redux": "7.1.0",
     "react-router-dom": "5.0.1",
+    "react-slick": "^0.24.0",
     "react-text-mask": "5.4.3",
     "react-truncate": "2.4.0",
     "redux": "4.0.3",
