--- a/package.json
+++ b/package.json
@@ -52,10 +52,11 @@
     "react-hot-loader": "4.12.5",
     "react-redux": "7.1.0",
     "react-router-dom": "5.0.1",
-    "react-slick": "^0.24.0",
+    "react-slick": "0.24.0",
     "react-text-mask": "5.4.3",
     "react-truncate": "2.4.0",
     "redux": "4.0.3",
+    "redux-saga": "1.0.5",
     "redux-thunk": "2.3.0",
     "uuid": "3.3.2",
     "yup": "0.27.0"
