--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "html-webpack-plugin": "3.2.0",
     "husky": "3.0.0",
     "lint-staged": "9.1.0",
+    "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "4.12.0",
     "nodemon": "1.19.1",
     "npm-run-all": "4.1.5",
