--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "future-comes",
   "version": "1.0.0",
-  "description": "Тестовое задание для Future Comes",
+  "description": "Staff List",
   "main": "index.js",
   "repository": "git@github.com:tsvetkovrb/future-comes.git",
   "author": "Roman <tsvetkovv22@gmail.com>",
@@ -38,19 +38,19 @@
     "webpack": "4.35.3",
     "webpack-cli": "3.3.5",
     "webpack-dev-server": "3.7.2",
-    "webpack-messages": "2.0.4"
+    "webpack-messages": "2.0.4",
+    "@hot-loader/react-dom": "16.8.6",
+    "babel-polyfill": "6.26.0",
+    "react-hot-loader": "4.12.5"
   },
   "dependencies": {
-    "@hot-loader/react-dom": "16.8.6",
     "axios": "0.19.0",
-    "babel-polyfill": "6.26.0",
     "body-parser": "1.19.0",
     "cors": "2.8.5",
     "express": "4.17.1",
     "formik": "1.5.8",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-hot-loader": "4.12.5",
     "react-redux": "7.1.0",
     "react-router-dom": "5.0.1",
     "react-slick": "0.24.0",
@@ -66,7 +66,8 @@
     "dev:client": "webpack-dev-server --mode development",
     "dev:server": "nodemon server/server.js",
     "build": "webpack --mode production",
-    "dev": "npm-run-all --parallel dev:*"
+    "dev": "npm-run-all --parallel dev:*",
+    "start": "node server/server.js"
   },
   "husky": {
     "hooks": {
