--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "@babel/core": "7.5.4",
     "@babel/plugin-proposal-class-properties": "7.5.0",
     "@babel/plugin-proposal-throw-expressions": "7.2.0",
+    "@babel/plugin-transform-runtime": "^7.8.0",
     "@babel/preset-env": "7.5.4",
     "@babel/preset-react": "7.0.0",
+    "@hot-loader/react-dom": "16.8.6",
+    "@types/jest": "^24.0.25",
     "babel-eslint": "10.0.2",
     "babel-loader": "8.0.6",
+    "babel-polyfill": "6.26.0",
     "css-loader": "3.0.0",
     "eslint": "4.19.1",
     "eslint-config-airbnb": "17.1.1",
@@ -26,22 +30,23 @@
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
     "husky": "3.0.0",
+    "jest": "^24.9.0",
     "lint-staged": "9.1.0",
     "mini-css-extract-plugin": "^0.8.0",
+    "moxios": "^0.4.0",
     "node-sass": "4.12.0",
     "nodemon": "1.19.1",
     "npm-run-all": "4.1.5",
+    "react-hot-loader": "4.12.5",
     "redux-devtools-extension": "2.13.8",
+    "redux-mock-store": "^1.5.4",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
     "url-loader": "2.0.1",
     "webpack": "4.35.3",
     "webpack-cli": "3.3.5",
     "webpack-dev-server": "3.7.2",
-    "webpack-messages": "2.0.4",
-    "@hot-loader/react-dom": "16.8.6",
-    "babel-polyfill": "6.26.0",
-    "react-hot-loader": "4.12.5"
+    "webpack-messages": "2.0.4"
   },
   "dependencies": {
     "axios": "0.19.0",
@@ -63,10 +68,10 @@
     "yup": "0.27.0"
   },
   "scripts": {
-    "dev:client": "webpack-dev-server --mode development",
     "build": "webpack --mode production",
-    "dev": "npm-run-all --parallel dev:*",
-    "start": "node server/server.js"
+    "dev": "webpack-dev-server --mode development",
+    "start": "node server/server.js",
+    "test": "jest --config=jestconfig.json"
   },
   "husky": {
     "hooks": {
@@ -75,7 +80,8 @@
   },
   "lint-staged": {
     "*.{js,jsx}": [
-      "eslint --quiet --fix",
+      "eslint src --quiet --fix",
+      "yarn test",
       "git add"
     ]
   }
