--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,11 @@
 {
-  "presets": [["@babel/preset-env"], "@babel/preset-react"],
+  "presets": [
+    [
+      "@babel/preset-env"
+    ],
+    "@babel/preset-react",
+    "@babel/typescript"
+  ],
   "plugins": [
     "react-hot-loader/babel",
     "@babel/plugin-proposal-class-properties",
