--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "future-comes",
   "version": "1.0.0",
   "description": "Staff List",
-  "main": "index.js",
+  "main": "index",
   "repository": "git@github.com:tsvetkovrb/future-comes.git",
   "author": "Roman <tsvetkovv22@gmail.com>",
   "license": "MIT",
@@ -10,38 +10,48 @@
     "@babel/core": "7.5.4",
     "@babel/plugin-proposal-class-properties": "7.5.0",
     "@babel/plugin-proposal-throw-expressions": "7.2.0",
-    "@babel/plugin-transform-runtime": "^7.8.0",
+    "@babel/plugin-transform-runtime": "7.8.0",
     "@babel/preset-env": "7.5.4",
     "@babel/preset-react": "7.0.0",
+    "@babel/preset-typescript": "7.13.0",
     "@hot-loader/react-dom": "16.8.6",
-    "@types/jest": "^24.0.25",
+    "@types/jest": "24.0.25",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "@types/react-router-dom": "^5.1.7",
+    "@typescript-eslint/eslint-plugin": "4.14.1",
+    "@typescript-eslint/parser": "4.22.0",
     "babel-eslint": "10.0.2",
     "babel-loader": "8.0.6",
     "babel-polyfill": "6.26.0",
     "css-loader": "3.0.0",
-    "eslint": "4.19.1",
-    "eslint-config-airbnb": "17.1.1",
-    "eslint-config-airbnb-base": "13.2.0",
+    "eslint": "7.18.0",
+    "eslint-config-airbnb-typescript": "12.0.0",
+    "eslint-config-prettier": "7.2.0",
     "eslint-import-resolver-alias": "1.1.2",
-    "eslint-plugin-import": "2.18.0",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.14.2",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-prettier": "3.3.1",
+    "eslint-plugin-react": "7.22.0",
+    "eslint-plugin-react-hooks": "4.2.0",
     "file-loader": "4.0.0",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
     "husky": "3.0.0",
-    "jest": "^24.9.0",
+    "jest": "24.9.0",
     "lint-staged": "9.1.0",
-    "mini-css-extract-plugin": "^0.8.0",
-    "moxios": "^0.4.0",
+    "mini-css-extract-plugin": "0.8.0",
+    "moxios": "0.4.0",
     "node-sass": "4.12.0",
     "nodemon": "1.19.1",
     "npm-run-all": "4.1.5",
+    "prettier": "2.2.1",
     "react-hot-loader": "4.12.5",
     "redux-devtools-extension": "2.13.8",
-    "redux-mock-store": "^1.5.4",
+    "redux-mock-store": "1.5.4",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
+    "typescript": "4.2.4",
     "url-loader": "2.0.1",
     "webpack": "4.35.3",
     "webpack-cli": "3.3.5",
@@ -80,8 +90,7 @@
   },
   "lint-staged": {
     "*.{js,jsx}": [
-      "eslint src --quiet --fix",
-      "yarn test",
+      "npm run test",
       "git add"
     ]
   }
