feat: rewritten the components in typescript

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,18 @@
   "settings": {
     "react": {
       "version": "detect"
+    },
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"],
+        "paths": ["src"]
+      }
     }
+  },
+  "env": {
+    "browser": true,
+    "es6": true,
+    "jest": true
   },
   "extends": [
     "plugin:react/recommended",
@@ -23,10 +34,9 @@
   "rules": {
     "react/prop-types": "off",
     "react/react-in-jsx-scope": "off",
-    "@typescript-eslint/no-unused-vars": [
-      "error"
-    ],
+    "@typescript-eslint/no-unused-vars": ["error"],
     "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/ban-ts-comment": "off",
     "jsx-a11y/anchor-is-valid": "off",
     "jsx-a11y/no-static-element-interactions": "off",
     "jsx-a11y/click-events-have-key-events": "off",
@@ -42,6 +52,7 @@
     "function-paren-newline": "off",
     "prefer-arrow-callback": "off",
     "@typescript-eslint/indent": "off",
-    "react/button-has-type": "off"
+    "react/button-has-type": "off",
+    "react/state-in-constructor": "off"
   }
 }
