--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@babel/preset-env": "7.5.4",
     "@babel/preset-react": "7.0.0",
     "@babel/preset-typescript": "7.13.0",
-    "@hot-loader/react-dom": "16.8.6",
     "@types/jest": "24.0.25",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-slick": "^0.23.4",
+    "@types/react-text-mask": "^5.4.7",
+    "@types/react-truncate": "^2.3.3",
+    "@types/uuid": "^8.3.0",
+    "@types/yup": "^0.29.11",
     "@typescript-eslint/eslint-plugin": "4.14.1",
     "@typescript-eslint/parser": "4.22.0",
     "babel-eslint": "10.0.2",
@@ -59,6 +63,7 @@
     "webpack-messages": "2.0.4"
   },
   "dependencies": {
+    "@hot-loader/react-dom": "16.8.6",
     "axios": "0.19.0",
     "body-parser": "1.19.0",
     "cors": "2.8.5",
@@ -82,16 +87,5 @@
     "dev": "webpack-dev-server --mode development",
     "start": "node server/server.js",
     "test": "jest --config=jestconfig.json"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{js,jsx}": [
-      "npm run test",
-      "git add"
-    ]
   }
 }
