--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jest": "24.0.25",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-slick": "^0.23.4",
     "@types/react-text-mask": "^5.4.7",
