--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-slick": "^0.23.4",
     "@types/react-text-mask": "^5.4.7",
     "@types/react-truncate": "^2.3.3",
+    "@types/redux-devtools-extension": "^2.13.2",
     "@types/uuid": "^8.3.0",
     "@types/yup": "^0.29.11",
     "@typescript-eslint/eslint-plugin": "4.14.1",
